# ox

./: .gitignore  .liccor  .liccor.yml  .travic.yml  .travis.yml  CMakeLists.txt  Makefile  OxConfig.cmake  config.cmake
cmake/Modules/: GBA.cmake  Mingw.cmake
scripts/: cibuild  setup_build  setup_build_debug  setup_build_gba
src/: CMakeLists.txt  _memops.cpp  _memops.hpp  _strops.cpp  _strops.hpp  _types.hpp  filestore.cpp  filestore.hpp  filesystem.cpp  filesystem.hpp  memfs.cpp  memfs.hpp  types.hpp
src/memphis/: CMakeLists.txt  _types.hpp  memfs.cpp  memfs.hpp
src/ox/: CMakeLists.txt
src/ox/clargs/: CMakeLists.txt  clargs.cpp  clargs.hpp
src/ox/fs/: CMakeLists.txt  filestore.cpp  filestore.hpp  filesystem.cpp  filesystem.hpp  inodemgr.cpp  inodemgr.hpp  oxfs_fuse.cpp  oxfs_fuse.hpp  oxfstool.cpp  pathiterator.cpp  pathiterator.hpp  toollib.cpp  toollib.hpp
src/ox/fs/test/: CMakeLists.txt  filestore_format.cpp  filestoreio.cpp  filesystem_format.cpp  tests.cpp
src/ox/log/: CMakeLists.txt  log.cpp  log.hpp
src/ox/mc/: CMakeLists.txt  err.hpp  mc.hpp  presencemask.cpp  presencemask.hpp  read.cpp  read.hpp  write.cpp  write.hpp
src/ox/mc/test/: CMakeLists.txt  tests.cpp
src/ox/std/: CMakeLists.txt  _memops.cpp  _memops.hpp  _strops.hpp  _types.hpp  bitops.hpp  byteswap.cpp  byteswap.hpp  memops.cpp  memops.hpp  random.cpp  random.hpp  std.hpp  string.hpp  strops.cpp  strops.hpp  types.hpp
src/ox/std/test/: CMakeLists.txt  byteswap_test.cpp  strops_test.cpp  tests.cpp
test/: CMakeLists.txt  filestoreio.cpp  format.cpp  fsstore.cpp  test.cpp
